@@ -2,6 +2,7 @@ Revision history for Test::PDL
 
 {{$NEXT}}
 
+ - added tests involving null piddles (Edward Baudrez)
  - try to work around a warning message generated by List::MoreUtils 0.33_005
    which made the tests fail on platforms with this version (Edward Baudrez)
 
